 [package]
name = "sevino"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance object storage service written in Rust"
license = "MIT"

[dependencies]
# Web framework - 使用Axum替代Rocket
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }

# File system operations
tokio-fs = "0.1"

# Hashing
sha2 = "0.10"
md5 = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Command line arguments
clap = { version = "4.0", features = ["derive"] }

# Multipart form data
multipart = "0.18"

# Compression
flate2 = "1.0"

# Base64 encoding
base64 = "0.21"

# URL encoding
url = "2.4"

# Regular expressions
regex = "1.0"

# Memory management
bytes = "1.0"

# Concurrent data structures
parking_lot = "0.12"

# LRU cache
lru = "0.10"

# Cross-platform path handling
path-clean = "0.1"

# OpenAPI/Swagger support
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"